projects/overlays/prod/acme-nuxeo25/02-api-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nuxeo-api-deployment
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: nuxeo-api     
          resources:
            requests:
              cpu: "500m"
              memory: "2Gi"
            limits:
              cpu: "1"
              memory: "4Gi"
